--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -36,3 +36,7 @@ $black-color: #000000 !default;
 
 $code-bg-color-light:     rgba($purple-color, 0.05);
 $code-bg-color-dark:      #2c3237 !default;
+
+// Minhas variáveis
+$pastel-color:          #f4f5c8;
+$grey-journal-color:    #000000
