--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -38,5 +38,5 @@ $code-bg-color-light:     rgba($purple-color, 0.05);
 $code-bg-color-dark:      #2c3237 !default;
 
 // Minhas variáveis
-$pastel-color:          #f4f5c8;
+$pastel-color:          #dfdfdf;
 $grey-journal-color:    #000000
