--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,10 +5,10 @@
 
 
 // Colors
-$red-color:           #FF3636 !default;
+$red-color:           #FF0A0B !default;
 $red-color-dark:      #B71C1C !default;
 $orange-color:        #F29105 !default;
-$blue-color:          #0076df !default;
+$blue-color:          #1CAEE5 !default;
 $blue-color-dark:     #00369f !default;
 $cyan-color:          #2698BA !default;
 $light-cyan-color:    lighten($cyan-color, 25%);
@@ -21,7 +21,7 @@ $purple-color:        #B509AC !default;
 $light-purple-color:  lighten($purple-color, 25%);
 $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
-$yellow-color:        #efcc00 !default;
+$yellow-color:        #FCCF05 !default;
 
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
