--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -329,6 +329,7 @@ footer.sticky-bottom {
 // Blog
 
 .header-bar {
+  background-image: url("assets/img/RIDE_05-1400.webp");
   border-bottom: 1px solid var(--global-divider-color);
   text-align: center;
   padding-top: 2rem;
