--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,15 +2,13 @@
  * Content
  ******************************************************************************/
 
-body {
-  padding-bottom: 70px;
-  color: var(--global-text-color);
-  background-color: var(--global-bg-color);
-
-  h1, h2, h3, h4, h5, h6 {
-    scroll-margin-top: 66px;
-  }
-}
+ body 
+ {
+ background-image: url('../img/Fundo-1400.webp');
+ background-repeat: no-repeat;
+ background-size: cover;
+ background-position: center center;
+ }
 
 body.fixed-top-nav {
   // Add some padding for the nav-bar.
