--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,7 +4,7 @@
 
  body 
  {
- background-image: url('../img/Fundo-1400.webp');
+ background-image: url('../img/fundo_site-1400.webp');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
