--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -40,3 +40,5 @@ $code-bg-color-dark:      #2c3237 !default;
 // Minhas variáveis
 $pastel-color:          #dfdfdf;
 $grey-journal-color:    #000000
+
+// Fundo
