--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,8 +5,8 @@
  body 
  {
  background-image: url('../img/fundo_site-1400.webp');
- background-repeat: no-repeat;
- background-size: cover;
+ background-repeat: repeat;
+ background-size: none;
  background-position: center center;
  }
 
