--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,10 +4,11 @@
 
  body 
  {
- background-image: url('../img/fundo_site-1400.webp');
+ background-image: url('../img/fundo_site.jpg') ;
  background-repeat: repeat;
- background-size: none;
+ background-size: contain;
  background-position: center center;
+ // background-color: rgba($color: #111111, $alpha: 0.3);
  }
 
 body.fixed-top-nav {
