--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -47,6 +47,15 @@ html[data-theme='dark'] {
   --global-distill-app-color: #{$grey-color-light};
   --global-divider-color: #424246;
   --global-card-bg-color: #{$grey-900};
+  
+  body 
+ {
+ background-image: url('../img/fundo_site_black.jpg') ;
+ background-repeat: repeat;
+ background-size: contain;
+ background-position: center center;
+ // background-color: rgba($color: #111111, $alpha: 0.3);
+ }
 
   .fa-sun {
     padding-left: 10px;
